gccida/c2/output_constant
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constant/src/varasm.c:4989:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v13; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constant/src/varasm.c:4996:6: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
v6 = lang_hooks_0.expand_constant( exp); 
     ^~~~~~~~~~~~
     lang_hooks
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constant/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constant/src/varasm.c:4996:34: error: called object type '<dependent type>' is not a function or function pointer
v6 = lang_hooks_0.expand_constant( exp); 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constant/src/varasm.c:5016:6: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
if ( in_section_0 == in_text ) 
     ^~~~~~~~~~~~
     in_section
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constant/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constant/src/varasm.c:5032:49: error: use of undeclared identifier 'off_71EE08'
fprintf( ( FILE *)asm_out_file, ( const char *)&off_71EE08 + 4, "\t.zero\t", ( unsigned int)v5); 
                                                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constant/src/varasm.c:5097:6: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
if ( in_section_0 != in_text ) 
     ^~~~~~~~~~~~
     in_section
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constant/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_constant/src/obj/varasm.o] Error 1
